WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259728
[WGSL] Assertion failure when declarations have no type nor initializer
https://bugs.webkit.org/show_bug.cgi?id=259728
Summary
[WGSL] Assertion failure when declarations have no type nor initializer
Tadeu Zagallo
Reported
2023-08-02 02:43:06 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-02 02:43:20 PDT
<
rdar://problem/113258649
>
Tadeu Zagallo
Comment 2
2023-08-02 02:48:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16308
EWS
Comment 3
2023-08-07 06:39:37 PDT
Committed
266633@main
(51cdfa635552): <
https://commits.webkit.org/266633@main
> Reviewed commits have been landed. Closing PR #16308 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug